--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <p1> hola esta es una prueba </p>
     <p2> hola esta es una prueba </p>
     <p3> hola esta es una prueba </p>
+    <p4> hola esta es una prueba </p>
+    <p5> hola esta es una prueba </p>    
 </body>
 </html>
 <html></html>
