--- a/prueba_02.html
+++ b/prueba_02.html
@@ -10,9 +10,9 @@
 <body>
   <p1>prueba numero dos</p>
   <p2>prueba numero dos</p>
-  <p3> prueba</p3>
-  <p4> prueba</p4>
-  <p5> pruebas</5>
+  <p3> prueba</p>
+  <p4> prueba</p>
+  <p5> pruebas</>
   
 
 </body
