se actualizo titulo

--- a/prueba_02.html
+++ b/prueba_02.html
@@ -8,6 +8,8 @@
 </head>
 
 <body>
+
+  <title>esta es la segunda prueba</title>
   <p1>prueba numero dos</p>
   <p2>prueba numero dos</p>
   <p3> prueba</p>
@@ -16,4 +18,3 @@
 
 </body
 </html>
-<html><html>
