en la tierra no pesas nada

--- a/codigo_de_prueba02.html
+++ b/codigo_de_prueba02.html
@@ -4,8 +4,8 @@
     <title>Tu peso en narnia</title>
   </head>
   <body>
-    <h1>Tu peso en otro planeta tierra</h1>
-    <p>En la tierra pesas igual que en narnia</p>
+    <h1>Tu peso en chorrillos</h1>
+    <p>En la tierra no pesas nada</p>
     <script>
     var usuario = prompt("Cual es tu peso es la tierra?");
     var peso = parseInt(usuario);
