--- a/codigo_de_prueba02.html
+++ b/codigo_de_prueba02.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Tu peso en narnia</title>
+    <title>Tu peso en chile</title>
   </head>
   <body>
-    <h1>Tu peso en chorrillos</h1>
-    <p>En la tierra no pesas nada</p>
+    <h1>Tu peso en chile</h1>
+    <p>En providencia no pesas nada</p>
     <script>
     var usuario = prompt("Cual es tu peso es la tierra?");
     var peso = parseInt(usuario);
