se actualizo el codigo

--- a/codigo_de_prueba02.html
+++ b/codigo_de_prueba02.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Tu peso en chile</title>
+    <meta charset="utf-8">
+    <title>Tu peso en la tierra</title>
   </head>
   <body>
-    <h1>Tu peso en chile</h1>
-    <p>En providencia no pesas nada</p>
+    <h1>Tu peso en la tierra</h1>
+    <p>En el planeta tierra</p>
     <script>
     var usuario = prompt("Cual es tu peso es la tierra?");
     var peso = parseInt(usuario);
@@ -15,7 +16,7 @@
     var peso_final;
     peso_final = peso * g_marte / g_tierra;
     peso_final = parseInt(peso_final);
-    document.write("Tu peso en plutonio es <strong>" + peso_final + " kilos</strong>");
+    document.write("Tu peso en la tierra es <strong>" + peso_final + " kilos</strong>");
     </script>
   </body>
 </html>
